[package]
name = "mbedtls"
version = "0.9.0"
authors = ["Jethro Beekman <jethro@fortanix.com>"]
edition = "2018"
license = "Apache-2.0/GPL-2.0+"
description = """
Idiomatic Rust wrapper for MbedTLS, allowing you to use MbedTLS with only safe
code while being able to use such great Rust features like error handling and
closures.

Building on MbedTLS's focus on embedded use, this crate can be used in a no_std
environment."""
readme = "../README.md"
repository = "https://github.com/fortanix/rust-mbedtls"
documentation = "https://docs.rs/mbedtls/"
keywords = ["MbedTLS","mbed","TLS","SSL","cryptography"]

[dependencies]
bitflags = "1"
core_io = { version = "0.1", features = ["collections"], optional = true }
esp-idf-sys = "0.33.0"
spin = { version = "0.9.4", default-features = false, optional = true }
byteorder = { version = "1.4.3", default-features = false }
yasna = { version = "0.5.1", optional = true, features = ["num-bigint", "bit-vec"] }
num-bigint = { version = "0.4.3", optional = true }
bit-vec = { version = "0.6.3", optional = true }
block-modes = { version = "0.9.1", optional = true }
rc2 = { version = "0.8.1", optional = true }
cfg-if = "1.0.0"
rand_core = "0.6.4"
embedded-io = { version = "0.4.0", optional = true }

[target.x86_64-fortanix-unknown-sgx.dependencies]
rs-libc = "0.2.3"
chrono = "0.4"

[dependencies.mbedtls-sys-espidf]
version = "0.1.0"
default-features = false
features = ["custom_printf", "trusted_cert_callback", "threading"]
path = "../mbedtls-sys-espidf"

[dev-dependencies]
libc = "0.2.139"
rand = "0.8.5"
serde_cbor = "0.6"
hex = "0.3"
matches = "0.1.9"
hyper = { version = "0.10.16", default-features = false }

[build-dependencies]
anyhow = "1.0.68"
embuild = "0.31.0"

[features]
# Features are documented in the README
default = ["std", "time"]
std = ["byteorder/std", "mbedtls-sys-espidf/std", "yasna"]
debug = ["mbedtls-sys-espidf/debug"]
no_std_deps = ["core_io", "spin"]
mpi_force_c_code = ["mbedtls-sys-espidf/mpi_force_c_code"]
rdrand = []
time = ["mbedtls-sys-espidf/time"]
dsa = ["std", "yasna", "num-bigint", "bit-vec"]
pkcs12 = ["std", "yasna"]
pkcs12_rc2 = ["pkcs12", "rc2", "block-modes"]
legacy_protocols = ["mbedtls-sys-espidf/legacy_protocols"]
async = ["embedded-io"]

[[example]]
name = "client"
required-features = ["std"]

[[example]]
name = "client_dtls"
required-features = ["std"]

[[example]]
name = "client_psk"
required-features = ["std"]

[[example]]
name = "server"
required-features = ["std"]

[[test]]
name = "client_server"
required-features = ["std"]

[[test]]
name = "ssl_conf_ca_cb"
required-features = ["std"]

[[test]]
name = "ssl_conf_verify"
required-features = ["std"]

[[test]]
name = "hyper"
required-features = ["std"]
